--- a/Workbooks/Figure4.Rmd
+++ b/Workbooks/Figure4.Rmd
@@ -664,6 +664,120 @@ dev.off()
 
 ```
 
+Test proportions with permutation test for multiple samples with anova
+
+```{r}
+# if not done above the 
+library(scProportionTest)
+# create a propotion test object
+
+Idents(seu.q) <- "Celltypes"
+prop_test <- sc_utils(seu.q)
+
+# run the permutation anova
+# This is a CelltypeR function that utilizes the permutation test in the anova permutation function avoperm in the permuco library
+
+perm_anova_all_iPSC <- permutation_test_multi(
+	sc_utils_obj = prop_test,
+	cluster_identity = "Celltypes",
+	sample_identity = "IPSC"
+)
+
+# view the results
+
+perm_anova_all_iPSC
+perm_anova_all_iPSC[, c(1,6,7)]
+
+
+# save the results table
+write.csv(perm_anova_all_iPSC, "PermANOVA_compare3iPSClines.csv")
+
+
+
+```
+There are two significant difference for the Parametric P value
+
+Visualize with two plots
+
+```{r}
+library(ggplot2)
+library(tidyverse)
+
+# plotting function - shows the Fraction (proportion of each cell type for each sample and highlights significant differences shown by permutation anova test)
+plot_diff <- function(data, title = "Name of plot", colours = c("orange", "blue", "purple")) {
+  # Calculate the mean fraction value across the samples for each cluster
+  data_mean <- data %>%
+    mutate(Mean_Fraction = rowMeans(select(., ends_with(".Fraction"))))
+  
+  # Reshape the dataframe to long format
+  data_long <- tidyr::pivot_longer(data_mean, cols = -c(Cluster, SS, Parametric_Pval, Resample_Pval, Mean_Fraction), 
+                                    names_to = "Sample", values_to = "Difference")
+  
+  # Extract sample names from Sample column
+  data_long$Sample <- sub("\\..*", "", data_long$Sample)
+  
+  # Create the dot plot
+  dot_plot <- ggplot(data_long, aes(x = Difference, y = Cluster, color = Sample, shape = Parametric_Pval <= 0.05)) +
+    geom_point(size = 3, stroke = 0.5) +  # Plot points
+    scale_color_manual(values = colours) +  # Color dots by sample
+      # Set shape of dots based on significance
+    labs(x = "Difference from Mean", y = "Cluster") +  # Add axis labels
+    theme_minimal() +  # Set plot theme
+    theme(axis.text.y = element_text(size = 8)) +  # Adjust size of y-axis text
+    guides(shape = guide_legend(title = "Significance")) + # Add legend title for shape
+    scale_shape_manual(values = c("TRUE" = 21, "FALSE" = 19), 
+                        breaks = c(TRUE, FALSE),
+                        labels = c("P value < 0.05", "P value > 0.05"))
+  
+  return(dot_plot)
+}
+
+## plotting function to plot the mean and standard deviation of the mean proportions across samples for each cell type - significant differences by the permutation anova test are shown in pink
+
+plot_mean_fraction <- function(output_df, title = "Name of plot") {
+  # Calculate the mean fraction and standard deviation across samples for each cluster
+  output_df <- output_df %>%
+    pivot_longer(cols = contains(".Fraction"), names_to = "Sample", values_to = "Fraction") %>%
+    group_by(Cluster) %>%
+    summarise(Mean_Fraction = mean(Fraction),
+              Std_Dev = sd(Fraction),
+              P_parametric = min(Parametric_Pval))
+  
+  # Determine colors and labels based on significance of contrast
+  output_df$color <- ifelse(output_df$P_parametric < 0.05, "pink", "grey")
+  output_df$significance <- ifelse(output_df$P_parametric < 0.05, "Parameteric P val < 0.05", "Parametric P value > 0.05")
+  
+  # Plot the mean fraction and standard deviation
+  ggplot(output_df, aes(x = Mean_Fraction, y = reorder(Cluster, Mean_Fraction), color = significance)) +
+    geom_point(size = 3) +  # Plot points with color
+    geom_errorbarh(aes(xmin = Mean_Fraction - Std_Dev, xmax = Mean_Fraction + Std_Dev), height = 0) +  # Add error bars
+    labs(x = "Mean Fraction", y = "Cluster") +  # Axis labels
+    scale_color_manual(values = c("purple", "darkgrey"), labels = c("P value < 0.05", "P value > 0.05")) +  # Use specified colors and labels
+    theme_minimal() +  # Plot theme
+    theme(axis.text.y = element_text(size = 8))  + # Adjust y-axis text size
+    ggtitle(title)
+}
+
+# Example usage:
+
+
+
+
+dfplot <- plot_diff(perm_anova_all_iPSC, title = "Difference from the mean proprotion of each cell type for iPSC lines AIW002, AJG001C, 3450", colours = c("#E57A77","#1F449C","#7CA1CC"))
+meanplot <- plot_mean_fraction(perm_anova_all_iPSC, "Mean proprotion of Cell types across iPSC lines AIW002, AJG001C, 3450")
+
+pdf("Diff_from_mean_3ipsc_lines_permanova.pdf")
+dfplot
+dev.off()
+
+
+dfplot
+meanplot
+
+```
+
+
+
 
 
 
